# RUST_Real-time_plots_using_GTK-rs_and_Plotters-rs

./: Cargo.toml
src/: Plotter.glade  main.rs
